2000-06-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (assign): Allow x(bool) = RHS to succeed if x is
	previously undefined and set size of x to size of bool index.
	* idx-vector.cc (IDX_VEC_REP::maybe_convert_one_zero_to_idx):
	Allow z_len to be zero.
	(IDX_VEC_REP::freeze): If z_len is zero, set frozen_at_z_len to len.
	If frozen, don't assert that frozen_at_z_len == z_len.

2000-05-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-edit.c (octave_rl_clear_screen): Call _rl_clear_screen
	instead of rl_clear_screen.

2000-05-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array-d.cc: Instantiate ArrayN<double> here too.
	* Array-idx-vec.cc, ArrayN-idx.h, ArrayN.cc, ArrayN.h: New files.
	* Makefile.in: Add them to the appropriate lists.

2000-04-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::operator =): Don't set max_indices to 1 here.

2000-03-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-sysdep.h: octave_chdir returns int, not bool.

2000-03-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (liboctave.$(SHLEXT)): Delete target
	before rebuilding.

2000-03-21  Ben Sapp <bsapp@nua.lampf.lanl.gov>:

	* liboctave/Makefile.in (liboctave.$(LIBEXT)): New target.
	(libraries): Depend only on library targets, not archive members.

2000-03-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: (objects): New target.

	* lo-cutils.c: New file.
	* Makefile.in (SOURCES): Add it to the list.
	* lo-utils.h: Declare octave_qsort here.
	* Array.h (Array::qsort): Use it here.

2000-03-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-time.cc: Include <sys/types.h> and <unistd.h>, if available.

2000-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-hist.c (octave_history_list): Do something when not
	printing line numbers.  Fix reallocation of retval.

2000-02-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-inc): Install files in
	$(octincludedir)/octave.